--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "idna"]
 	path = idna
-	url = https://git.sailfishos.org/mirror/idna.git
+	url = https://github.com/sailfishos-mirror/idna.git
